SERVER-41269 Set txn state to in-progress when fetching active transaction state